# tasko

./: .dockerignore  .gitignore  README.md  compose.yaml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: applications.py  assistant.py  conversations.py  documents.py  health.py  job_search.py  jobs.py  parsers.py  privacy.py  profile.py  settings.py
apps/api/app/core/: __init__.py  database.py  identity.py  migrations.py  openclaw_state.py  settings.py
apps/api/app/models/: __init__.py  applications.py  assistant.py  conversations.py  jobs.py  (+6 more)
apps/api/migrations/: env.py
apps/api/tests/: test_ai_backend.py  test_ai_match.py  test_ai_match_jobs.py  test_ai_privacy.py  test_applications.py  test_assistant.py  test_assistant_actions.py  test_conversations.py  test_cover_letter_blocks.py  test_document_analysis.py  test_document_packs.py  test_document_retention.py  test_document_security.py  test_document_validation.py  test_documents.py  test_experience_evidence.py  test_generation_context.py  test_health.py  test_indeed_parser.py  test_job_screening.py  test_job_screening_store.py  test_job_search_api.py  test_job_search_persistence.py  test_job_search_run_api.py  test_job_search_schedule.py  test_job_search_worker.py  test_jobs.py  test_jobs_ch_parser.py  test_linkedin_parser.py  test_migrations.py  test_openclaw_state.py  test_owner_scoping.py  test_profile.py  test_resume_blocks.py  test_resume_import.py  test_settings.py  test_storage_cleanup.py  test_vacancy_search.py
(+103 files in other folders)
